# mcp-gsc

./: .gitignore  README.md  gsc_server.py  pyproject.toml  requirements.txt
